# internal-memory-train

./: .gitignore  README.md
FunctionRedirect/: CMakeLists.txt
FunctionRedirect/src/: main.cpp
GameRanger-patch/: .gitignore  CMakeLists.txt  notes.txt
GameRanger-patch/CheatEngineTable/: GameRanger.CT
GameRanger-patch/src/: main.cpp
SlaveTestProgram/: CMakeLists.txt
SlaveTestProgram/src/: main.cpp
csgo-base/: CMakeLists.txt
csgo-base/include/: sdk.h  vector.h  vmt.h  vmthook.h
csgo-base/include/sdk/: CClientBase.h  CClientMode.h  CUserCmd.h
csgo-base/src/: CMenu.h  createmove.h  main.cpp  math.h  painttraverse.h  sdk.h  src_headers.h  vector.h  vmt.h
csgo-base/src/Menu/: Button.h  CMenu.h  CheckBox.h  Coords.h  IControl.h  Mouse.h
csgo-base/src/constants/: definitions.h
csgo-base/src/init/: init.cpp  init.h
csgo-base/src/sdk/: CBaseCombatWeapon.h  CClientBase.h  CEntity.h  CGameMovement.h  CGlobalVars.h  CUserCmd.h  IAppSystem.h  IClientEntityList.h  IClientModeShared.h  IEngineTrace.h  IInputSystem.h  IPanel.h  ISurface.h  IVDebugOverlay.h  IVEngineClient.h  IVPanel.h  studio.h
csgo-base/src/sdk/Additional/: Color.h
csgo-base/src/util/: DrawManager.h  interface_utils.h  sigscan.cpp  sigscan.h  string_constex.h
rogerfmnet-crackmes/: rogerfmnet-crackmes.sln
rogerfmnet-crackmes/rogerfmnet-crackmes/: dllmain.cpp  rogerfmnet-crackmes-01.cpp  rogerfmnet-crackmes.vcxproj  rogerfmnet-crackmes.vcxproj.filters  stdafx.cpp
rogerfmnet-crackmes/rogerfmnet-crackmes-02/: dllmain.cpp  rogerfmnet-crackmes-02.cpp  rogerfmnet-crackmes-02.vcxproj  rogerfmnet-crackmes-02.vcxproj.filters  stdafx.cpp
